--- a/设计文档/建筑1.html
+++ b/设计文档/建筑1.html
@@ -284,6 +284,18 @@
   color: #f1ffcc;
   background-color: #33ad1b;
 }
+#construct mil > code {
+  color: #ffebe8;
+  background-color: #cc3a46;
+}
+#construct sh > hr {
+  width: 50%;
+  border-top: 3px double #c0c0c0;
+}
+#construct tech {
+  color: #4EC5F1;
+  font-weight: bold;
+}
 </style>
 <ul>
 <li><a href="#%E5%BB%BA%E7%AD%91">&#x5EFA;&#x7B51;</a>
@@ -303,9 +315,14 @@
 <li><a href="#%E5%8D%87%E7%BA%A7">&#x5347;&#x7EA7;</a></li>
 </ul>
 </li>
-<li><a href="#%E4%BB%93%E5%BA%93">&#x4ED3;&#x5E93;</a>
+<li><a href="#%E9%93%81%E5%8C%A0%E9%93%BA">&#x94C1;&#x5320;&#x94FA;</a>
 <ul>
 <li><a href="#%E5%8D%87%E7%BA%A7-1">&#x5347;&#x7EA7;</a></li>
+</ul>
+</li>
+<li><a href="#%E4%BB%93%E5%BA%93">&#x4ED3;&#x5E93;</a>
+<ul>
+<li><a href="#%E5%8D%87%E7%BA%A7-2">&#x5347;&#x7EA7;</a></li>
 </ul>
 </li>
 </ul>
@@ -341,7 +358,7 @@
 <td><strong>&#x94C1;&#x5320;&#x94FA;</strong></td>
 <td>10&#x91D1;</td>
 <td>15s</td>
-<td>&#x5B8C;&#x6210;&#x79D1;&#x6280;<span style="color:#4EC5F1">&#x624B;&#x5DE5;&#x4E1A;</span></td>
+<td>&#x7814;&#x53D1;&#x79D1;&#x6280;<tech>&#x624B;&#x5DE5;&#x4E1A;</tech></td>
 <td>&#x63D0;&#x9AD8;&#x5355;&#x4F4D;&#x653B;&#x51FB;&#x529B;&#x3001;&#x9632;&#x5FA1;&#x529B;</td>
 <td>&#x662F;</td>
 </tr>
@@ -349,7 +366,7 @@
 <td><strong>&#x4ED3;&#x5E93;</strong></td>
 <td>20&#x91D1;</td>
 <td>15s</td>
-<td>&#x5B8C;&#x6210;&#x79D1;&#x6280;<span style="color:#4EC5F1">&#x884C;&#x653F;&#x673A;&#x6784;</span></td>
+<td>&#x7814;&#x53D1;&#x79D1;&#x6280;<tech>&#x884C;&#x653F;&#x673A;&#x6784;</tech></td>
 <td>&#x7F29;&#x77ED;&#x91C7;&#x96C6;&#x8DEF;&#x7A0B;</td>
 <td>&#x662F;</td>
 </tr>
@@ -357,7 +374,7 @@
 <td><strong>&#x519C;&#x5E84;</strong></td>
 <td>30&#x91D1;</td>
 <td>25s</td>
-<td>&#x5B8C;&#x6210;&#x79D1;&#x6280;<span style="color:#4EC5F1">&#x519C;&#x5B66;</span></td>
+<td>&#x7814;&#x53D1;&#x79D1;&#x6280;<tech>&#x519C;&#x5B66;</tech></td>
 <td>&#x6BCF;&#x8FC7;&#x4E00;&#x6BB5;&#x65F6;&#x95F4;&#x751F;&#x6210;&#x4E00;&#x5B9A;&#x7684;&#x98DF;&#x7269;</td>
 <td>&#x662F;</td>
 </tr>
@@ -365,7 +382,7 @@
 <td><strong>&#x77FF;&#x573A;</strong></td>
 <td>30&#x91D1;</td>
 <td>30s</td>
-<td>&#x5B8C;&#x6210;&#x79D1;&#x6280;<span style="color:#4EC5F1">&#x77FF;&#x4E95;&#x52D8;&#x63A2;</span></td>
+<td>&#x7814;&#x53D1;&#x79D1;&#x6280;<tech>&#x77FF;&#x4E95;&#x52D8;&#x63A2;</tech></td>
 <td>&#x6BCF;&#x8FC7;&#x4E00;&#x6BB5;&#x65F6;&#x95F4;&#x751F;&#x6210;&#x4E00;&#x5B9A;&#x7684;&#x9EC4;&#x91D1;</td>
 <td>&#x662F;</td>
 </tr>
@@ -373,7 +390,7 @@
 <td><strong>&#x5175;&#x8425;</strong></td>
 <td>20&#x91D1;</td>
 <td>15s</td>
-<td>&#x5B8C;&#x6210;&#x79D1;&#x6280;<span style="color:#4EC5F1">&#x519B;&#x529F;&#x5236;</span></td>
+<td>&#x7814;&#x53D1;&#x79D1;&#x6280;<tech>&#x519B;&#x529F;&#x5236;</tech></td>
 <td>&#x4E3A;&#x6B65;&#x5175;&#x7CFB;&#x5355;&#x4F4D;&#x751F;&#x4EA7;&#x63D0;&#x4F9B;&#x589E;&#x76CA;</td>
 <td>&#x662F;</td>
 </tr>
@@ -381,7 +398,7 @@
 <td><strong>&#x9776;&#x573A;</strong></td>
 <td>20&#x91D1;</td>
 <td>15s</td>
-<td>&#x5B8C;&#x6210;&#x79D1;&#x6280;<span style="color:#4EC5F1">&#x590D;&#x5408;&#x5F13;</span></td>
+<td>&#x7814;&#x53D1;&#x79D1;&#x6280;<tech>&#x590D;&#x5408;&#x5F13;</tech></td>
 <td>&#x4E3A;&#x5F13;&#x5F29;&#x7CFB;&#x5355;&#x4F4D;&#x751F;&#x4EA7;&#x63D0;&#x4F9B;&#x589E;&#x76CA;</td>
 <td>&#x662F;</td>
 </tr>
@@ -389,7 +406,7 @@
 <td><strong>&#x9A6C;&#x53A9;</strong></td>
 <td>20&#x91D1;</td>
 <td>15s</td>
-<td>&#x5B8C;&#x6210;&#x79D1;&#x6280;<span style="color:#4EC5F1">&#x9A6C;&#x5339;&#x80B2;&#x79CD;</span></td>
+<td>&#x7814;&#x53D1;&#x79D1;&#x6280;<tech>&#x9A6C;&#x5339;&#x80B2;&#x79CD;</tech></td>
 <td>&#x4E3A;&#x9A91;&#x5175;&#x7CFB;&#x5355;&#x4F4D;&#x751F;&#x4EA7;&#x63D0;&#x4F9B;&#x589E;&#x76CA;</td>
 <td>&#x662F;</td>
 </tr>
@@ -397,7 +414,7 @@
 <td><strong>&#x5175;&#x5DE5;&#x5382;</strong></td>
 <td>20&#x91D1;</td>
 <td>15s</td>
-<td>&#x5B8C;&#x6210;&#x79D1;&#x6280;<span style="color:#4EC5F1">&#x519B;&#x4E8B;&#x6280;&#x672F;</span></td>
+<td>&#x7814;&#x53D1;&#x79D1;&#x6280;<tech>&#x519B;&#x4E8B;&#x6280;&#x672F;</tech></td>
 <td>&#x4E3A;&#x653B;&#x57CE;&#x6B66;&#x5668;&#x7CFB;&#x4E0E;&#x706B;&#x836F;&#x7CFB;&#x5355;&#x4F4D;&#x751F;&#x4EA7;&#x63D0;&#x4F9B;&#x589E;&#x76CA;</td>
 <td>&#x662F;</td>
 </tr>
@@ -405,7 +422,7 @@
 <td><strong>&#x5B66;&#x9662;</strong></td>
 <td>20&#x91D1;</td>
 <td>15s</td>
-<td>&#x5B8C;&#x6210;&#x79D1;&#x6280;<span style="color:#4EC5F1">&#x6559;&#x80B2;</span></td>
+<td>&#x7814;&#x53D1;&#x79D1;&#x6280;<tech>&#x6559;&#x80B2;</tech></td>
 <td>&#x4E3A;&#x79D1;&#x6280;&#x7814;&#x53D1;&#x63D0;&#x4F9B;&#x589E;&#x76CA;</td>
 <td>&#x662F;</td>
 </tr>
@@ -413,7 +430,7 @@
 <td><strong>&#x62D2;&#x9A6C;</strong></td>
 <td>5&#x91D1;</td>
 <td>8s</td>
-<td>&#x5B8C;&#x6210;&#x79D1;&#x6280;<span style="color:#4EC5F1">&#x519B;&#x4E8B;&#x5DE5;&#x7A0B;</span></td>
+<td>&#x7814;&#x53D1;&#x79D1;&#x6280;<tech>&#x519B;&#x4E8B;&#x5DE5;&#x7A0B;</tech></td>
 <td>&#x5438;&#x5F15;&#x706B;&#x529B;&#xFF0C;&#x963B;&#x6321;&#x654C;&#x65B9;&#x8FDB;&#x653B;&#x3002;</td>
 <td>&#x662F;</td>
 </tr>
@@ -421,7 +438,7 @@
 <td><strong>&#x9A7B;&#x9632;&#x70B9;</strong></td>
 <td>5&#x91D1;</td>
 <td>8s</td>
-<td>&#x5B8C;&#x6210;&#x79D1;&#x6280;<span style="color:#4EC5F1">&#x590D;&#x5408;&#x5F13;</span></td>
+<td>&#x7814;&#x53D1;&#x79D1;&#x6280;<tech>&#x590D;&#x5408;&#x5F13;</tech></td>
 <td>&#x5F13;&#x5F29;&#x7CFB;&#x5355;&#x4F4D;&#x4E0E;&#x706B;&#x836F;&#x7CFB;&#x5355;&#x4F4D;&#x53EF;&#x4EE5;&#x9A7B;&#x624E;&#x5728;&#x9A7B;&#x9632;&#x70B9;&#x8FDB;&#x884C;&#x5C04;&#x51FB;&#x3002;</td>
 <td>&#x662F;</td>
 </tr>
@@ -473,6 +490,9 @@
 <hr>
 <h2 class="mume-header" id="%E8%AF%A6%E7%BB%86%E8%AE%BE%E8%AE%A1">&#x8BE6;&#x7EC6;&#x8BBE;&#x8BA1;</h2>
 
+<sh>
+<hr>
+</sh>
 <h3 class="mume-header" id="%E4%BD%8F%E6%88%BF">&#x4F4F;&#x623F;</h3>
 
 <p><code>&#x7ECF;&#x6D4E;&#x7C7B;&#x5EFA;&#x7B51;</code></p>
@@ -484,29 +504,29 @@
 <thead>
 <tr>
 <th>&#x5347;&#x7EA7;&#x65B9;&#x5411;</th>
-<th>LV1</th>
-<th>LV2</th>
-<th>LV3</th>
-<th>LV4</th>
-<th>LV5</th>
+<th style="text-align:center">LV1</th>
+<th style="text-align:center">LV2</th>
+<th style="text-align:center">LV3</th>
+<th style="text-align:center">LV4</th>
+<th style="text-align:center">LV5</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td><strong>&#x5DE5;&#x4EBA;&#x4EBA;&#x53E3;</strong></td>
-<td>+3</td>
-<td>+2</td>
-<td>+2</td>
-<td>+2</td>
-<td>+5</td>
+<td style="text-align:center">+3</td>
+<td style="text-align:center">+2</td>
+<td style="text-align:center">+2</td>
+<td style="text-align:center">+2</td>
+<td style="text-align:center">+5</td>
 </tr>
 <tr>
 <td><strong>&#x519B;&#x4E8B;&#x4EBA;&#x53E3;</strong></td>
-<td>+10</td>
-<td>+5</td>
-<td>+5</td>
-<td>+5</td>
-<td>+15</td>
+<td style="text-align:center">+10</td>
+<td style="text-align:center">+5</td>
+<td style="text-align:center">+5</td>
+<td style="text-align:center">+5</td>
+<td style="text-align:center">+15</td>
 </tr>
 </tbody>
 </table>
@@ -515,29 +535,29 @@
 <thead>
 <tr>
 <th>&#x5347;&#x7EA7;&#x65B9;&#x5411;</th>
-<th>LV1</th>
-<th>LV2</th>
-<th>LV3</th>
-<th>LV4</th>
-<th>LV5</th>
+<th style="text-align:center">LV1</th>
+<th style="text-align:center">LV2</th>
+<th style="text-align:center">LV3</th>
+<th style="text-align:center">LV4</th>
+<th style="text-align:center">LV5</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td><strong>&#x5DE5;&#x4EBA;&#x4EBA;&#x53E3;</strong></td>
-<td>(5&#x91D1; + 10s)</td>
-<td>(2&#x91D1; + 5s)</td>
-<td>(2&#x91D1; + 5s)</td>
-<td>(2&#x91D1; + 5s)</td>
-<td>(5&#x91D1; + 15s)</td>
+<td style="text-align:center" rowspan="2">(5&#x91D1; + 10s)</td>
+<td style="text-align:center">(2&#x91D1; + 5s)</td>
+<td style="text-align:center">(2&#x91D1; + 5s)</td>
+<td style="text-align:center">(2&#x91D1; + 5s)</td>
+<td style="text-align:center">(5&#x91D1; + 15s)</td>
 </tr>
 <tr>
 <td><strong>&#x519B;&#x4E8B;&#x4EBA;&#x53E3;</strong></td>
-<td>(5&#x91D1; + 10s)</td>
-<td>(2&#x91D1; + 5s)</td>
-<td>(2&#x91D1; + 5s)</td>
-<td>(2&#x91D1; + 5s)</td>
-<td>(5&#x91D1; + 15s)</td>
+
+<td style="text-align:center">(2&#x91D1; + 5s)</td>
+<td style="text-align:center">(2&#x91D1; + 5s)</td>
+<td style="text-align:center">(2&#x91D1; + 5s)</td>
+<td style="text-align:center">(5&#x91D1; + 15s)</td>
 </tr>
 </tbody>
 </table>
@@ -546,32 +566,133 @@
 <thead>
 <tr>
 <th>&#x5347;&#x7EA7;&#x65B9;&#x5411;</th>
-<th>LV1</th>
-<th>LV2</th>
-<th>LV3</th>
-<th>LV4</th>
-<th>LV5</th>
+<th style="text-align:center">LV1</th>
+<th style="text-align:center">LV2</th>
+<th style="text-align:center">LV3</th>
+<th style="text-align:center">LV4</th>
+<th style="text-align:center">LV5</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td><strong>&#x5DE5;&#x4EBA;&#x4EBA;&#x53E3;</strong></td>
-<td rowspan="2">--</td>
-<td>+ 10% HP</td>
-<td>+ 10% HP</td>
-<td>+ 10% HP</td>
-<td>+ 13% HP</td>
+<td style="text-align:center" rowspan="2">--</td>
+<td style="text-align:center">+ 10% HP</td>
+<td style="text-align:center">+ 10% HP</td>
+<td style="text-align:center">+ 10% HP</td>
+<td style="text-align:center">+ 13% HP</td>
 </tr>
 <tr>
 <td><strong>&#x519B;&#x4E8B;&#x4EBA;&#x53E3;</strong></td>
 
-<td>+ 10% HP</td>
-<td>+ 10% HP</td>
-<td>+ 10% HP</td>
-<td>+ 13% HP</td>
+<td style="text-align:center">+ 10% HP</td>
+<td style="text-align:center">+ 10% HP</td>
+<td style="text-align:center">+ 10% HP</td>
+<td style="text-align:center">+ 13% HP</td>
 </tr>
 </tbody>
 </table>
+<sh>
+<hr>
+</sh>
+<h3 class="mume-header" id="%E9%93%81%E5%8C%A0%E9%93%BA">&#x94C1;&#x5320;&#x94FA;</h3>
+
+<p><mil><code>&#x519B;&#x4E8B;&#x7C7B;&#x5EFA;&#x7B51;</code></mil></p>
+<div class="admonition note">
+<p class="admonition-title">&#x89E3;&#x9501;&#x8DEF;&#x7EBF;</p>
+<div class="mermaid">flowchart LR
+    sgy[&#x624B;&#x5DE5;&#x4E1A;]:::target;
+    sgy --&gt; zz[&#x94F8;&#x9020;]:::notmain---&gt; yj[&#x51B6;&#x91D1;]:::notmain;
+    sgy --&gt; szj[&#x9501;&#x5B50;&#x7532;]:::notmain---&gt; bj[&#x677F;&#x7532;]:::notmain;
+classDef notmain fill:#d1d1d1, stroke:#707070;
+classDef target fill:#fad866, stroke:#c16b1f;
+</div><p>&#x9700;&#x8981;&#x7814;&#x53D1;&#x79D1;&#x6280;<tech>&#x624B;&#x5DE5;&#x4E1A;</tech>&#x3002;</p>
+</div>
+<p>&#x73A9;&#x5BB6;&#x53EF;&#x4EE5;&#x5728;&#x94C1;&#x5320;&#x94FA;&#x4E2D;&#x5347;&#x7EA7;&#x5168;&#x573A;&#x5355;&#x4F4D;&#x7684;&#x653B;&#x51FB;&#x529B;&#x6216;&#x9632;&#x5FA1;&#x529B;&#x3002;</p>
+<div class="admonition warning">
+<p class="admonition-title">&#x6CE8;&#x610F;</p>
+<p>&#x94C1;&#x5320;&#x94FA;&#x7684;&#x5347;&#x7EA7;&#x4E0D;&#x662F;&#x79D1;&#x6280;&#xFF0C;&#x4E0E;&#x5176;&#x4ED6;&#x5EFA;&#x7B51;&#x4E00;&#x6837;&#xFF0C;&#x5F53;&#x94C1;&#x5320;&#x94FA;&#x88AB;&#x6467;&#x6BC1;&#x540E;&#xFF0C;&#x5176;&#x63D0;&#x4F9B;&#x7684;&#x6240;&#x6709;&#x589E;&#x76CA;&#x6548;&#x679C;&#x5C06;&#x5168;&#x90E8;&#x6D88;&#x5931;&#x3002;</p>
+</div>
+<h4 class="mume-header" id="%E5%8D%87%E7%BA%A7-1">&#x5347;&#x7EA7;</h4>
+
+<p>&#x94C1;&#x5320;&#x94FA;&#x5177;&#x6709;&#x4E24;&#x4E2A;&#x65B9;&#x5411;&#x7684;&#x5347;&#x7EA7;&#x3002;</p>
+<table>
+<thead>
+<tr>
+<th>&#x5347;&#x7EA7;&#x65B9;&#x5411;</th>
+<th style="text-align:center">LV1</th>
+<th style="text-align:center">LV2</th>
+<th style="text-align:center">LV3</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><strong>&#x653B;&#x51FB;&#x529B;</strong></td>
+<td style="text-align:center">+10%</td>
+<td style="text-align:center">+5%</td>
+<td style="text-align:center">+5%</td>
+</tr>
+<tr>
+<td><strong>&#x9632;&#x5FA1;&#x529B;</strong></td>
+<td style="text-align:center">+10%</td>
+<td style="text-align:center">+5%</td>
+<td style="text-align:center">+5%</td>
+</tr>
+</tbody>
+</table>
+<p>&#x4E0D;&#x540C;&#x5347;&#x7EA7;&#x7684;&#x82B1;&#x9500;&#xFF1A;</p>
+<table>
+<thead>
+<tr>
+<th>&#x5347;&#x7EA7;&#x65B9;&#x5411;</th>
+<th style="text-align:center">LV1</th>
+<th style="text-align:center">LV2</th>
+<th style="text-align:center">LV3</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><strong>&#x653B;&#x51FB;&#x529B;</strong></td>
+<td style="text-align:center" rowspan="2">(8&#x91D1; + 20s)</td>
+<td style="text-align:center">(4&#x91D1; + 10s)</td>
+<td style="text-align:center">(4&#x91D1; + 10s)</td>
+</tr>
+<tr>
+<td><strong>&#x9632;&#x5FA1;&#x529B;</strong></td>
+
+<td style="text-align:center">(4&#x91D1; + 10s)</td>
+<td style="text-align:center">(4&#x91D1; + 10s)</td>
+</tr>
+</tbody>
+</table>
+<p>&#x5347;&#x7EA7;&#x80FD;&#x63D0;&#x4F9B;&#x7684;&#x57FA;&#x672C;&#x6570;&#x503C;&#x5C5E;&#x6027;&#x589E;&#x76CA;&#xFF1A;</p>
+<table>
+<thead>
+<tr>
+<th>&#x5347;&#x7EA7;&#x65B9;&#x5411;</th>
+<th style="text-align:center">LV1</th>
+<th style="text-align:center">LV2</th>
+<th style="text-align:center">LV3</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><strong>&#x653B;&#x51FB;&#x529B;</strong></td>
+<td style="text-align:center" rowspan="2">--</td>
+<td style="text-align:center">+ 10% HP</td>
+<td style="text-align:center">+ 10% HP</td>
+</tr>
+<tr>
+<td><strong>&#x9632;&#x5FA1;&#x529B;</strong></td>
+
+<td style="text-align:center">+ 10% &#x9632;&#x5FA1;&#x529B;</td>
+<td style="text-align:center">+ 10% &#x9632;&#x5FA1;&#x529B;</td>
+</tr>
+</tbody>
+</table>
+<sh>
+<hr>
+</sh>
 <h3 class="mume-header" id="%E4%BB%93%E5%BA%93">&#x4ED3;&#x5E93;</h3>
 
 <p><code>&#x7ECF;&#x6D4E;&#x7C7B;&#x5EFA;&#x7B51;</code></p>
@@ -588,7 +709,8 @@
     B --&gt; I---&gt; d2((...)):::notmain;
 classDef notmain fill:#d1d1d1, stroke:#707070;
 classDef target fill:#fad866, stroke:#c16b1f;
-</div></div>
+</div><p>&#x9700;&#x8981;&#x7814;&#x53D1;&#x79D1;&#x6280;<tech>&#x884C;&#x653F;&#x673A;&#x6784;</tech>&#x3002;</p>
+</div>
 <p>&#x5DE5;&#x4EBA;&#x53EF;&#x4EE5;&#x5728;&#x91C7;&#x96C6;&#x5B8C;&#x6210;&#x540E;&#x5C06;&#x7269;&#x8D44;&#x76F4;&#x63A5;&#x9001;&#x5230;&#x4ED3;&#x5E93;&#x8FDB;&#x884C;&#x5378;&#x8D27;&#xFF0C;&#x800C;&#x4E0D;&#x9700;&#x8981;&#x8FD4;&#x56DE;&#x57FA;&#x5730;&#x3002;</p>
 <p>&#x4ED3;&#x5E93;&#x53EF;&#x4EE5;&#x5BB9;&#x7EB3;&#x6240;&#x6709;&#x8D44;&#x6E90;&#x7684;&#x5B58;&#x50A8;&#xFF0C;&#x5C3D;&#x7BA1;&#x5B83;&#x53EA;&#x4F9B;&#x5176;&#x6240;&#x5728;&#x8DEF;&#x4E0A;&#x7684;&#x5DE5;&#x4EBA;&#x4F7F;&#x7528;&#x3002;</p>
 <div class="admonition example">
@@ -601,28 +723,28 @@ classDef target fill:#fad866, stroke:#c16b1f;
 <p>&#x5F53;&#x4E00;&#x6761;&#x8DEF;&#x4E0A;&#x5EFA;&#x6709;&#x591A;&#x4E2A;&#x4ED3;&#x5E93;&#x65F6;&#xFF0C;&#x5DE5;&#x4EBA;&#x53EA;&#x8BA4;&#x6700;&#x65B0;&#x5EFA;&#x6210;&#x7684;&#x4ED3;&#x5E93;&#x3002;<br>
 &#x4ED3;&#x5E93;&#x88AB;&#x6467;&#x6BC1;&#x540E;&#xFF0C;&#x5DE5;&#x4EBA;&#x4F1A;&#x5C06;&#x8D44;&#x6E90;&#x5378;&#x8F7D;&#x81F3;&#x8BE5;&#x4ED3;&#x5E93;&#x5EFA;&#x6210;&#x524D;&#x7684;&#x8D44;&#x6E90;&#x5378;&#x8F7D;&#x70B9;&#x3002;</p>
 </div>
-<h4 class="mume-header" id="%E5%8D%87%E7%BA%A7-1">&#x5347;&#x7EA7;</h4>
+<h4 class="mume-header" id="%E5%8D%87%E7%BA%A7-2">&#x5347;&#x7EA7;</h4>
 
 <p>&#x4ED3;&#x5E93;&#x53EA;&#x6709;&#x4E00;&#x4E2A;&#x65B9;&#x5411;&#x7684;&#x5347;&#x7EA7;&#x3002;</p>
 <table>
 <thead>
 <tr>
 <th>&#x5347;&#x7EA7;&#x65B9;&#x5411;</th>
-<th>LV1</th>
-<th>LV2</th>
-<th>LV3</th>
-<th>LV4</th>
-<th>LV5</th>
+<th style="text-align:center">LV1</th>
+<th style="text-align:center">LV2</th>
+<th style="text-align:center">LV3</th>
+<th style="text-align:center">LV4</th>
+<th style="text-align:center">LV5</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td><strong>&#x5378;&#x8D27;&#x901F;&#x5EA6;</strong></td>
-<td>--</td>
-<td>-2.5%</td>
-<td>-2.5%</td>
-<td>-2.5%</td>
-<td>-5%</td>
+<td style="text-align:center">--</td>
+<td style="text-align:center">-2.5%</td>
+<td style="text-align:center">-2.5%</td>
+<td style="text-align:center">-2.5%</td>
+<td style="text-align:center">-5%</td>
 </tr>
 </tbody>
 </table>
@@ -631,21 +753,21 @@ classDef target fill:#fad866, stroke:#c16b1f;
 <thead>
 <tr>
 <th>&#x5347;&#x7EA7;&#x65B9;&#x5411;</th>
-<th>LV1</th>
-<th>LV2</th>
-<th>LV3</th>
-<th>LV4</th>
-<th>LV5</th>
+<th style="text-align:center">LV1</th>
+<th style="text-align:center">LV2</th>
+<th style="text-align:center">LV3</th>
+<th style="text-align:center">LV4</th>
+<th style="text-align:center">LV5</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td><strong>&#x5378;&#x8D27;&#x901F;&#x5EA6;</strong></td>
-<td>(6&#x91D1; + 10s)</td>
-<td>(2&#x91D1; + 5s)</td>
-<td>(2&#x91D1; + 5s)</td>
-<td>(2&#x91D1; + 5s)</td>
-<td>(2&#x91D1; + 10s)</td>
+<td style="text-align:center">(6&#x91D1; + 10s)</td>
+<td style="text-align:center">(2&#x91D1; + 5s)</td>
+<td style="text-align:center">(2&#x91D1; + 5s)</td>
+<td style="text-align:center">(2&#x91D1; + 5s)</td>
+<td style="text-align:center">(2&#x91D1; + 10s)</td>
 </tr>
 </tbody>
 </table>
@@ -654,21 +776,21 @@ classDef target fill:#fad866, stroke:#c16b1f;
 <thead>
 <tr>
 <th>&#x5347;&#x7EA7;&#x65B9;&#x5411;</th>
-<th>LV1</th>
-<th>LV2</th>
-<th>LV3</th>
-<th>LV4</th>
-<th>LV5</th>
+<th style="text-align:center">LV1</th>
+<th style="text-align:center">LV2</th>
+<th style="text-align:center">LV3</th>
+<th style="text-align:center">LV4</th>
+<th style="text-align:center">LV5</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td><strong>&#x5378;&#x8D27;&#x901F;&#x5EA6;</strong></td>
-<td>--</td>
-<td>+ 10% HP</td>
-<td>+ 10% HP</td>
-<td>+ 10% HP</td>
-<td>+ 5% &#x9632;&#x5FA1;&#x529B; +5%HP</td>
+<td style="text-align:center">--</td>
+<td style="text-align:center">+ 10% HP</td>
+<td style="text-align:center">+ 10% HP</td>
+<td style="text-align:center">+ 10% HP</td>
+<td style="text-align:center">+ 5% &#x9632;&#x5FA1;&#x529B; +5%HP</td>
 </tr>
 </tbody>
 </table>
