--- a/设计文档/建筑1.html
+++ b/设计文档/建筑1.html
@@ -1388,7 +1388,7 @@ classDef target fill:#fad866, stroke:#c16b1f;
     zs --&gt; md[&#x9A6C;&#x956B;];
     zs --&gt; yy[&#x533B;&#x836F;]:::notmain;
     zs --&gt; fhg[&#x590D;&#x5408;&#x5F13;]:::notmain;
-    md --&gt; jsgc[&#x519B;&#x4E8B;&#x5DE5;&#x7A0B;] ---&gt; gcqx[&#x653B;&#x57CE;&#x5668;&#x68B0;];
+    md --&gt; jsgc[&#x519B;&#x4E8B;&#x5DE5;&#x7A0B;] --&gt; gcqx[&#x653B;&#x57CE;&#x5668;&#x68B0;];
     md --&gt; mpyz[&#x9A6C;&#x5339;&#x80B2;&#x79CD;]:::notmain;
     gcqx --&gt; hy[&#x706B;&#x836F;]:::notmain --&gt; hp[&#x706B;&#x70AE;]:::notmain;
     gcqx --&gt; jsjs[&#x519B;&#x4E8B;&#x6280;&#x672F;]:::target;
@@ -1718,7 +1718,7 @@ classDef target fill:#fad866, stroke:#c16b1f;
     zs --&gt; md[&#x9A6C;&#x956B;];
     zs --&gt; yy[&#x533B;&#x836F;]:::notmain;
     zs --&gt; fhg[&#x590D;&#x5408;&#x5F13;]:::notmain;
-    md --&gt; jsgc[&#x519B;&#x4E8B;&#x5DE5;&#x7A0B;]:::target ---&gt; gcqx[&#x653B;&#x57CE;&#x5668;&#x68B0;]:::notmain;
+    md --&gt; jsgc[&#x519B;&#x4E8B;&#x5DE5;&#x7A0B;]:::target --&gt; gcqx[&#x653B;&#x57CE;&#x5668;&#x68B0;]:::notmain;
     md --&gt; mpyz[&#x9A6C;&#x5339;&#x80B2;&#x79CD;]:::notmain;
     gcqx --&gt; hy[&#x706B;&#x836F;]:::notmain --&gt; hp[&#x706B;&#x70AE;]:::notmain;
     gcqx --&gt; jsjs[&#x519B;&#x4E8B;&#x6280;&#x672F;]:::notmain;
@@ -1842,7 +1842,7 @@ classDef target fill:#fad866, stroke:#c16b1f;
     zs --&gt; md[&#x9A6C;&#x956B;]:::notmain;
     zs --&gt; yy[&#x533B;&#x836F;]:::notmain;
     zs --&gt; fhg[&#x590D;&#x5408;&#x5F13;]:::target;
-    md --&gt; jsgc[&#x519B;&#x4E8B;&#x5DE5;&#x7A0B;]:::notmain ---&gt; gcqx[&#x653B;&#x57CE;&#x5668;&#x68B0;]:::notmain;
+    md --&gt; jsgc[&#x519B;&#x4E8B;&#x5DE5;&#x7A0B;]:::notmain --&gt; gcqx[&#x653B;&#x57CE;&#x5668;&#x68B0;]:::notmain;
     md --&gt; mpyz[&#x9A6C;&#x5339;&#x80B2;&#x79CD;]:::notmain;
     gcqx --&gt; hy[&#x706B;&#x836F;]:::notmain --&gt; hp[&#x706B;&#x70AE;]:::notmain;
     gcqx --&gt; jsjs[&#x519B;&#x4E8B;&#x6280;&#x672F;]:::notmain;
