--- a/设计文档/建筑1.html
+++ b/设计文档/建筑1.html
@@ -1812,7 +1812,7 @@ classDef target fill:#fad866, stroke:#c16b1f;
 <tbody>
 <tr>
 <td><strong>&#x5BF9;&#x6B65;&#x5175;&#x6297;&#x6027;</strong></td>
-<td style="text-align:center">--</td>
+<td style="text-align:center" rowspan="2">--</td>
 <td style="text-align:center">+50%HP</td>
 <td style="text-align:center">+30%HP</td>
 <td style="text-align:center">+30%HP</td>
@@ -1820,7 +1820,7 @@ classDef target fill:#fad866, stroke:#c16b1f;
 </tr>
 <tr>
 <td><strong>&#x5BF9;&#x9A91;&#x5175;&#x6297;&#x6027;</strong></td>
-<td style="text-align:center">--</td>
+
 <td style="text-align:center">+20%&#x9632;&#x5FA1;&#x529B;</td>
 <td style="text-align:center">+20%&#x9632;&#x5FA1;&#x529B;</td>
 <td style="text-align:center">+20%&#x9632;&#x5FA1;&#x529B;</td>
@@ -1958,7 +1958,7 @@ classDef target fill:#fad866, stroke:#c16b1f;
 <tbody>
 <tr>
 <td><strong>&#x8FDB;&#x9A7B;&#x5355;&#x4F4D;&#x653B;&#x51FB;&#x529B;</strong></td>
-<td style="text-align:center">--</td>
+<td style="text-align:center" rowspan="3">--</td>
 <td style="text-align:center">+30%HP</td>
 <td style="text-align:center">+5%HP</td>
 <td style="text-align:center">+5%HP</td>
@@ -1966,7 +1966,7 @@ classDef target fill:#fad866, stroke:#c16b1f;
 </tr>
 <tr>
 <td><strong>&#x8FDB;&#x9A7B;&#x5355;&#x4F4D;&#x653B;&#x51FB;&#x8303;&#x56F4;</strong></td>
-<td style="text-align:center">--</td>
+
 <td style="text-align:center">+30%HP</td>
 <td style="text-align:center">+5%HP</td>
 <td style="text-align:center">+5%HP</td>
@@ -1974,7 +1974,7 @@ classDef target fill:#fad866, stroke:#c16b1f;
 </tr>
 <tr>
 <td><strong>&#x8FDB;&#x9A7B;&#x5355;&#x4F4D;&#x9632;&#x5FA1;&#x529B;</strong></td>
-<td style="text-align:center">--</td>
+
 <td style="text-align:center">+30%HP</td>
 <td style="text-align:center">+5%HP</td>
 <td style="text-align:center">+5%HP</td>
