--- a/设计文档/建筑/0.html
+++ b/设计文档/建筑/0.html
@@ -431,7 +431,7 @@
 <h3 class="mume-header" id="%E5%BB%BA%E7%AD%91%E5%BB%BA%E9%80%A0">&#x5EFA;&#x7B51;&#x5EFA;&#x9020;</h3>
 
 <p>&#x5730;&#x56FE;&#x7684;&#x4E09;&#x6761;&#x8DEF;&#x4E0A;&#x6709;&#x591A;&#x4E2A;&#x5EFA;&#x7B51;&#x69FD;&#x4F4D;&#xFF0C;&#x5728;&#x6E38;&#x620F;&#x5F00;&#x59CB;&#x65F6;&#x5747;&#x4E3A;&#x7A7A;&#x95F2;&#x72B6;&#x6001;&#x3002;<br>
-&#x73A9;&#x5BB6;&#x53EF;&#x4EE5;&#x5728;&#x7A7A;&#x95F2;&#x7684;&#x5EFA;&#x7B51;&#x69FD;&#x4F4D;&#x5EFA;&#x9020;&#x5EFA;&#x7B51;&#xFF0C;&#x786E;&#x5B9A;&#x8FDB;&#x884C;&#x5EFA;&#x9020;&#x540E;&#x5EFA;&#x7B51;&#x69FD;&#x4F4D;&#x5C06;&#x7531;&#x7A7A;&#x95F2;&#x72B6;&#x6001;&#x8F6C;&#x4E3A;&#x5360;&#x7528;&#x72B6;&#x6001;&#x3002;&#x5EFA;&#x9020;&#x5EFA;&#x7B51;&#x9700;&#x8981;&#x82B1;&#x8D39;&#x4E00;&#x5B9A;&#x7684;&#x9EC4;&#x91D1;&#x5E76;&#x7B49;&#x5F85;&#x4E00;&#x5B9A;&#x7684;&#x65F6;&#x95F4;&#xFF0C;&#x8FD9;&#x6BB5;&#x8FC7;&#x7A0B;&#x79F0;&#x4E3A;<strong>&#x5EFA;&#x9020;&#x8FC7;&#x7A0B;</strong>&#xFF0C;&#x5EFA;&#x7B51;&#x5FC5;&#x987B;&#x5728;&#x5EFA;&#x6210;&#x540E;&#x624D;&#x80FD;&#x8D77;&#x6548;&#x3002;</p>
+&#x73A9;&#x5BB6;&#x53EF;&#x4EE5;&#x5728;&#x7A7A;&#x95F2;&#x7684;&#x5EFA;&#x7B51;&#x69FD;&#x4F4D;&#x5EFA;&#x9020;&#x5EFA;&#x7B51;&#xFF0C;&#x786E;&#x5B9A;&#x8FDB;&#x884C;&#x5EFA;&#x9020;&#x540E;&#x5EFA;&#x7B51;&#x69FD;                                                                                                                                                                                                            &#x4F4D;&#x5C06;&#x7531;&#x7A7A;&#x95F2;&#x72B6;&#x6001;&#x8F6C;&#x4E3A;&#x5360;&#x7528;&#x72B6;&#x6001;&#x3002;&#x5EFA;&#x9020;&#x5EFA;&#x7B51;&#x9700;&#x8981;&#x82B1;&#x8D39;&#x4E00;&#x5B9A;&#x7684;&#x9EC4;&#x91D1;&#x5E76;&#x7B49;&#x5F85;&#x4E00;&#x5B9A;&#x7684;&#x65F6;&#x95F4;&#xFF0C;&#x8FD9;&#x6BB5;&#x8FC7;&#x7A0B;&#x79F0;&#x4E3A;<strong>&#x5EFA;&#x9020;&#x8FC7;&#x7A0B;</strong>&#xFF0C;&#x5EFA;&#x7B51;&#x5FC5;&#x987B;&#x5728;&#x5EFA;&#x6210;&#x540E;&#x624D;&#x80FD;&#x8D77;&#x6548;&#x3002;</p>
 <p>&#x5EFA;&#x7B51;&#x62E5;&#x6709;&#x9632;&#x5FA1;&#x529B;&#x4E0E;HP&#xFF0C;&#x4E00;&#x65E6;HP&#x5F52;&#x96F6;&#x89C6;&#x4E3A;&#x5EFA;&#x7B51;&#x88AB;&#x6467;&#x6BC1;&#xFF0C;&#x5176;&#x80FD;&#x63D0;&#x4F9B;&#x7684;&#x6240;&#x6709;&#x6548;&#x679C;&#x5C06;&#x5168;&#x90E8;&#x6D88;&#x5931;&#xFF0C;&#x5EFA;&#x7B51;&#x69FD;&#x4F4D;&#x5C06;&#x56DE;&#x5F52;&#x7A7A;&#x95F2;&#x72B6;&#x6001;&#x3002;<br>
 &#x901A;&#x8FC7;<strong>&#x4FEE;&#x7406;</strong>&#x53EF;&#x4EE5;&#x5C06;&#x5EFA;&#x7B51;&#x7684;HP&#x56DE;&#x6EE1;&#x3002;</p>
 <p>&#x73A9;&#x5BB6;&#x53EF;&#x4EE5;&#x4E3B;&#x52A8;<strong>&#x62C6;&#x9664;</strong>&#x5EFA;&#x7B51;&#xFF0C;&#x8FD9;&#x6837;&#x5C06;&#x53EF;&#x4EE5;&#x5C06;&#x5360;&#x7528;&#x7684;&#x5EFA;&#x7B51;&#x69FD;&#x4F4D;&#x7A7A;&#x51FA;&#xFF0C;&#x89C6;&#x4E3A;&#x5EFA;&#x7B51;&#x88AB;&#x6467;&#x6BC1;&#x3002;&#x62C6;&#x9664;&#x8FC7;&#x7A0B;&#x662F;&#x77AC;&#x95F4;&#x7684;&#x3002;</p>
@@ -2016,13 +2016,6 @@ classDef target fill:#fad866, stroke:#c16b1f;
 <li>&#x8865;&#x7ED9;&#x7AD9;&#x6240;&#x5728;&#x8DEF;&#x4E0A;<strong>&#x5355;&#x4F4D;&#x7684;&#x79FB;&#x52A8;&#x901F;&#x5EA6;+30%</strong>&#x3002;</li>
 <li>&#x98DF;&#x7269;&#x80FD;&#x63D0;&#x4F9B;<strong>&#x5176;&#x6570;&#x91CF;5%&#x7684;&#x751F;&#x4EA7;&#x529B;</strong></li>
 </ol>
-<div class="admonition tip">
-<p class="admonition-title">&#x63D0;&#x793A;</p>
-<ul>
-<li>&#x56E0;&#x4E3A;&#x8DDD;&#x79BB;&#x9A7B;&#x9632;&#x70B9;&#x6700;&#x8FD1;&#x7684;&#x5F13;&#x5F29;&#x7CFB;&#x6216;&#x706B;&#x836F;&#x7CFB;&#x5355;&#x4F4D;&#x4F1A;&#x81EA;&#x52A8;&#x8FDB;&#x9A7B;&#x9A7B;&#x9632;&#x70B9;&#xFF0C;&#x56E0;&#x6B64;&#x5728;&#x5411;&#x5EFA;&#x8BBE;&#x6709;&#x9A7B;&#x9632;&#x70B9;&#x7684;&#x8DEF;&#x6D3E;&#x9063;&#x5355;&#x4F4D;&#x65F6;&#xFF0C;&#x6D3E;&#x51FA;&#x5355;&#x4F4D;&#x7684;&#x987A;&#x5E8F;&#x5C06;&#x53D8;&#x5F97;&#x66F4;&#x52A0;&#x91CD;&#x8981;&#x3002;</li>
-<li>&#x654C;&#x65B9;&#x5355;&#x4F4D;&#x8FDB;&#x653B;&#x9A7B;&#x9632;&#x70B9;&#x65F6;&#xFF0C;&#x9700;&#x8981;&#x5148;&#x6740;&#x6B7B;&#x9A7B;&#x624E;&#x5728;&#x9A7B;&#x9632;&#x70B9;&#x5185;&#x7684;&#x5355;&#x4F4D;&#xFF0C;&#x518D;&#x653B;&#x51FB;&#x9A7B;&#x9632;&#x70B9;&#x5EFA;&#x7B51;&#x672C;&#x8EAB;&#x3002;</li>
-</ul>
-</div>
 <h4 class="mume-header undefined" id="%E5%8D%87%E7%BA%A7-13">&#x5347;&#x7EA7;</h4>
 
 <p>&#x8865;&#x7ED9;&#x7AD9;&#x53EA;&#x6709;&#x4E00;&#x4E2A;&#x65B9;&#x5411;&#x7684;&#x5347;&#x7EA7;&#x3002;</p>
@@ -2097,7 +2090,7 @@ classDef target fill:#fad866, stroke:#c16b1f;
 //
 // You can edit the 'MERMAID_CONFIG' variable below.
 MERMAID_CONFIG = {
-  startOnLoad: false
+  startOnLoad: true
 }
 
 if (window['MERMAID_CONFIG']) {
