--- a/设计文档/政策/0.html
+++ b/设计文档/政策/0.html
@@ -437,62 +437,146 @@
 </thead>
 <tbody>
 <tr>
-<td rowspan="2"><strong>T0</strong></td>
-<td>---</td>
-<td>----</td>
-<td>-</td>
+<td rowspan="6"><strong>T0</strong></td>
+<td>&#x6C11;&#x65CF;&#x8BA4;&#x540C;</td>
+<td>&#x8D85;&#x8FC7;&#x4E24;&#x540D;&#x58EB;&#x5175;&#x805A;&#x96C6;&#x65F6;&#xFF0C;&#x6BCF;&#x4F4D;&#x805A;&#x96C6;&#x7684;&#x58EB;&#x5175;&#x653B;&#x51FB;&#x529B;+30%&#x3002;</td>
+<td>4</td>
 </tr>
 <tr>
 
-<td>---</td>
-<td>----</td>
-<td>-</td>
-</tr>
-<tr>
-<td rowspan="2"><strong>T1</strong></td>
-<td>---</td>
-<td>----</td>
-<td>-</td>
+<td>&#x519B;&#x4E8B;&#x6218;&#x672F;</td>
+<td>&#x82E5;&#x67D0;&#x4E00;&#x5C40;&#x90E8;&#x8303;&#x56F4;&#x5185;&#x5B58;&#x5728;&#x672C;&#x65B9;&#x4E09;&#x79CD;&#x53CA;&#x4EE5;&#x4E0A;&#x4E0D;&#x540C;&#x5175;&#x79CD;&#x7684;&#x58EB;&#x5175;&#xFF0C;&#x5219;&#x8303;&#x56F4;&#x5185;&#x7684;&#x58EB;&#x5175;&#x653B;&#x51FB;&#x529B;+20%&#xFF0C;&#x9632;&#x5FA1;&#x529B;+20%&#x3002;</td>
+<td>4</td>
 </tr>
 <tr>
 
-<td>---</td>
-<td>----</td>
-<td>-</td>
-</tr>
-<tr>
-<td rowspan="2"><strong>T2</strong></td>
-<td>---</td>
-<td>----</td>
-<td>-</td>
+<td>&#x7406;&#x6027;&#x4E3B;&#x4E49;</td>
+<td>&#x8D2D;&#x4E70;&#x79D1;&#x6280;&#x514D;&#x8D39;&#xFF0C;&#x4F46;&#x79D1;&#x6280;&#x7814;&#x53D1;&#x901F;&#x5EA6;-50%&#x3002;</td>
+<td>4</td>
 </tr>
 <tr>
 
-<td>---</td>
-<td>----</td>
-<td>-</td>
+<td>&#x5B98;&#x50DA;&#x4F53;&#x7CFB;</td>
+<td>&#x653F;&#x7B56;&#x51B7;&#x5374;&#x65F6;&#x95F4;-50%&#xFF0C; &#x6240;&#x6709;&#x5355;&#x4F4D;&#x751F;&#x4EA7;&#x529B;+100%&#xFF0C;&#x4F46;&#x7EF4;&#x62A4;&#x8D39;&#x7528;+50%&#x3002;</td>
+<td>4</td>
 </tr>
 <tr>
-<td rowspan="5"><strong>T3</strong></td>
-<td>&#x6C11;&#x5175;&#x7EC4;&#x7EC7;</td>
-<td>&#x6240;&#x6709;&#x5175;&#x79CD;&#x9884;&#x5907;&#x5F79;+2&#x3002;</td>
+
+<td>&#x94F8;&#x5E01;&#x6743;</td>
+<td>&#x573A;&#x4E0A;&#x58EB;&#x5175;&#x53CA;&#x5DE5;&#x4EBA;&#x6BCF;25&#x79D2;&#x4EA7;&#x751F;1&#x9EC4;&#x91D1;&#x3002;</td>
+<td>4</td>
+</tr>
+<tr>
+
+<td>&#x626B;&#x8361;</td>
+<td>&#x9A91;&#x5175;&#x5355;&#x4F4D;&#x6BCF;&#x9020;&#x6210;50&#x70B9;&#x4F24;&#x5BB3;&#xFF0C;&#x53EF;&#x83B7;&#x5F97;1&#x9EC4;&#x91D1;&#x3002;</td>
+<td>3</td>
+</tr>
+<tr>
+<td rowspan="8"><strong>T1</strong></td>
+<td>&#x5C01;&#x5EFA;&#x5236;&#x5EA6;</td>
+<td>&#x519C;&#x573A;&#x5728;&#x6BCF;&#x6B21;&#x91C7;&#x96C6;&#x4E2D;&#x989D;&#x5916;&#x751F;&#x4EA7;2&#x98DF;&#x7269;&#xFF0C;&#x4F46;&#x58EB;&#x5175;&#x7684;&#x751F;&#x4EA7;&#x901F;&#x5EA6;-20%&#x3002;</td>
+<td>3</td>
+</tr>
+<tr>
+
+<td>&#x4E2D;&#x592E;&#x96C6;&#x6743;</td>
+<td>&#x58EB;&#x5175;&#x751F;&#x4EA7;&#x901F;&#x5EA6;+20%&#xFF0C;&#x5EFA;&#x7B51;&#x751F;&#x4EA7;&#x901F;&#x5EA6;+15%&#xFF0C;&#x4F46;&#x5355;&#x4F4D;&#x9020;&#x4EF7;+10%&#xFF0C;&#x5EFA;&#x7B51;&#x9020;&#x4EF7;+10%&#x3002;</td>
+<td>3</td>
+</tr>
+<tr>
+
+<td>&#x653F;&#x6559;&#x5408;&#x4E00;</td>
+<td>&#x58EB;&#x5175;&#x9020;&#x4EF7;-10%&#xFF0C;&#x9EC4;&#x91D1;&#x91C7;&#x96C6;&#x901F;&#x5EA6;+10%&#xFF0C;&#x4F46;&#x79D1;&#x6280;&#x7814;&#x53D1;&#x901F;&#x5EA6;-10%&#xFF0C;&#x653F;&#x7B56;&#x51B7;&#x5374;&#x65F6;&#x95F4;+10%&#x3002;</td>
+<td>3</td>
+</tr>
+<tr>
+
+<td>&#x536B;&#x56FD;&#x6218;&#x4E89;</td>
+<td>&#x58EB;&#x5175;&#x5728;&#x672C;&#x65B9;&#x57FA;&#x5730;&#x5230;&#x6218;&#x573A;<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mn>1</mn><mi mathvariant="normal">/</mi><mn>3</mn></mrow><annotation encoding="application/x-tex">1/3</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">1/3</span></span></span></span>&#x65F6;&#x653B;&#x51FB;&#x529B;+30%&#x3002;</td>
+<td>2</td>
+</tr>
+<tr>
+
+<td>&#x4EE5;&#x6218;&#x517B;&#x6218;</td>
+<td>&#x58EB;&#x5175;&#x5728;&#x6218;&#x6597;&#x65F6;&#x4E0D;&#x6D88;&#x8017;&#x8865;&#x7ED9;&#x3002;</td>
+<td>3</td>
+</tr>
+<tr>
+
+<td>&#x4EBA;&#x6587;&#x4E3B;&#x4E49;</td>
+<td>&#x58EB;&#x5175;&#x751F;&#x4EA7;&#x901F;&#x5EA6;+100%&#xFF0C;&#x58EB;&#x5175;&#x5355;&#x4F4D;&#x9884;&#x5907;&#x5F79;&#x4E0A;&#x9650;+3&#xFF0C;&#x4F46;&#x653B;&#x51FB;&#x529B;-40%&#xFF0C;&#x9632;&#x5FA1;&#x529B;-20%&#x3002;</td>
+<td>3</td>
+</tr>
+<tr>
+
+<td>&#x5B97;&#x65CF;&#x89C2;&#x5FF5;</td>
+<td>&#x5DE5;&#x4EBA;&#x751F;&#x4EA7;&#x901F;&#x5EA6;+100%&#xFF0C;&#x5DE5;&#x4EBA;&#x9884;&#x5907;&#x5F79;&#x4E0A;&#x9650;+5&#xFF0C;&#x4F46;&#x58EB;&#x5175;&#x9020;&#x4EF7;+50%&#x3002;</td>
+<td>3</td>
+</tr>
+<tr>
+
+<td>&#x6B96;&#x6C11;</td>
+<td>&#x82E5;&#x672C;&#x65B9;&#x7814;&#x53D1;&#x79D1;&#x6280;&#x6570;&#x91CF;&#x5927;&#x4E8E;&#x5BF9;&#x65B9;&#xFF0C;&#x5219;&#x5355;&#x4F4D;&#x751F;&#x4EA7;&#x901F;&#x5EA6;+20%&#xFF0C;&#x5EFA;&#x7B51;&#x5EFA;&#x9020;&#x901F;&#x5EA6;+20%&#x3002;</td>
+<td>3</td>
+</tr>
+<tr>
+<td rowspan="7"><strong>T2</strong></td>
+<td>&#x5BF9;&#x5916;&#x8D38;&#x6613;</td>
+<td>&#x8D44;&#x6E90;&#x5151;&#x6362;&#x635F;&#x8017;-10%&#x3002;</td>
+<td>2</td>
+</tr>
+<tr>
+
+<td>&#x5730;&#x65B9;&#x6CBB;&#x7406;</td>
+<td>&#x6BCF;&#x4F4D;&#x91C7;&#x96C6;&#x98DF;&#x7269;&#x7684;&#x5DE5;&#x4EBA;&#x80FD;&#x63D0;&#x4F9B;1&#x751F;&#x4EA7;&#x529B;&#x3002;</td>
 <td>1</td>
 </tr>
 <tr>
 
-<td>&#x52A8;&#x5458;&#x4EE4;</td>
-<td>&#x58EB;&#x5175;&#x751F;&#x4EA7;&#x901F;&#x5EA6;+20%&#x3002;</td>
+<td>&#x4EC0;&#x4E00;&#x7A0E;</td>
+<td>&#x573A;&#x4E0A;&#x5DE5;&#x4EBA;&#x6BCF;30&#x79D2;&#x4EA7;&#x751F;1&#x9EC4;&#x91D1;&#x3002;</td>
+<td>2</td>
+</tr>
+<tr>
+
+<td>&#x541B;&#x6743;&#x795E;&#x6388;</td>
+<td>&#x4FEE;&#x6539;&#x653F;&#x7B56;&#x7684;&#x51B7;&#x5374;&#x65F6;&#x95F4;-20%&#x3002;</td>
+<td>1</td>
+</tr>
+<tr>
+
+<td>&#x519B;&#x4E8B;&#x7EAA;&#x5F8B;</td>
+<td>&#x58EB;&#x5175;&#x9632;&#x5FA1;&#x529B;+10%&#x3002;</td>
+<td>1</td>
+</tr>
+<tr>
+
+<td>&#x5C1A;&#x6B66;&#x7CBE;&#x795E;</td>
+<td>&#x58EB;&#x5175;&#x653B;&#x51FB;&#x529B;+10%&#x3002;</td>
+<td>1</td>
+</tr>
+<tr>
+
+<td>&#x5FE0;&#x541B;&#x601D;&#x60F3;</td>
+<td>&#x672C;&#x65B9;&#x5DE5;&#x4EBA;&#x6B7B;&#x4EA1;&#x65F6;&#xFF0C;&#x53EF;&#x83B7;&#x5F97;&#x5176;&#x643A;&#x5E26;&#x8D44;&#x6E90;&#x7684;&#x4E00;&#x534A;&#x3002;</td>
+<td>1</td>
+</tr>
+<tr>
+<td rowspan="6"><strong>T3</strong></td>
+<td>&#x6C11;&#x5175;&#x7EC4;&#x7EC7;</td>
+<td>&#x6B65;&#x5175;&#x7C7B;&#x5355;&#x4F4D;&#x7684;&#x9884;&#x5907;&#x5F79;&#x4E0A;&#x9650;+2&#x3002;</td>
+<td>1</td>
+</tr>
+<tr>
+
+<td>&#x5F81;&#x53EC;</td>
+<td>&#x58EB;&#x5175;&#x751F;&#x4EA7;&#x901F;&#x5EA6;+10%&#x3002;</td>
 <td>1</td>
 </tr>
 <tr>
 
 <td>&#x5FAD;&#x5F79;</td>
-<td>&#x5DE5;&#x4EBA;&#x4EBA;&#x53E3;&#x4E0A;&#x9650;&#x6570;&#x91CF;+2&#x3002;</td>
-<td>1</td>
-</tr>
-<tr>
-
-<td>&#x5B97;&#x65CF;&#x89C2;&#x5FF5;</td>
 <td>&#x5DE5;&#x4EBA;&#x751F;&#x4EA7;&#x901F;&#x5EA6;+10%&#x3002;</td>
 <td>1</td>
 </tr>
@@ -500,6 +584,18 @@
 
 <td>&#x7ECF;&#x9A8C;&#x4E3B;&#x4E49;</td>
 <td>&#x79D1;&#x6280;&#x7814;&#x53D1;&#x901F;&#x5EA6;+10%&#x3002;</td>
+<td>1</td>
+</tr>
+<tr>
+
+<td>&#x5C0F;&#x519C;&#x7ECF;&#x6D4E;</td>
+<td>&#x98DF;&#x7269;&#x91C7;&#x96C6;&#x901F;&#x5EA6;+10%&#x3002;</td>
+<td>1</td>
+</tr>
+<tr>
+
+<td>&#x5B98;&#x8425;&#x77FF;&#x4E1A;</td>
+<td>&#x9EC4;&#x91D1;&#x91C7;&#x96C6;&#x901F;&#x5EA6;+5%&#x3002;</td>
 <td>1</td>
 </tr>
 </tbody>
