--- a/设计文档/政策/0.html
+++ b/设计文档/政策/0.html
@@ -438,13 +438,13 @@
 <tbody>
 <tr>
 <td rowspan="6"><strong>T0</strong></td>
-<td>&#x6C11;&#x65CF;&#x8BA4;&#x540C;</td>
-<td>&#x8D85;&#x8FC7;&#x4E24;&#x540D;&#x58EB;&#x5175;&#x805A;&#x96C6;&#x65F6;&#xFF0C;&#x6BCF;&#x4F4D;&#x805A;&#x96C6;&#x7684;&#x58EB;&#x5175;&#x653B;&#x51FB;&#x529B;+30%&#x3002;</td>
+<td>&#x519B;&#x56E2;&#x6218;&#x672F;</td>
+<td>&#x8D85;&#x8FC7;&#x4E09;&#x540D;&#x58EB;&#x5175;&#x805A;&#x96C6;&#x65F6;&#xFF0C;&#x6BCF;&#x4F4D;&#x805A;&#x96C6;&#x7684;&#x58EB;&#x5175;&#x653B;&#x51FB;&#x529B;+30%&#x3002;</td>
 <td>4</td>
 </tr>
 <tr>
 
-<td>&#x519B;&#x4E8B;&#x6218;&#x672F;</td>
+<td>&#x534F;&#x540C;&#x6218;&#x672F;</td>
 <td>&#x82E5;&#x67D0;&#x4E00;&#x5C40;&#x90E8;&#x8303;&#x56F4;&#x5185;&#x5B58;&#x5728;&#x672C;&#x65B9;&#x4E09;&#x79CD;&#x53CA;&#x4EE5;&#x4E0A;&#x4E0D;&#x540C;&#x5175;&#x79CD;&#x7684;&#x58EB;&#x5175;&#xFF0C;&#x5219;&#x8303;&#x56F4;&#x5185;&#x7684;&#x58EB;&#x5175;&#x653B;&#x51FB;&#x529B;+20%&#xFF0C;&#x9632;&#x5FA1;&#x529B;+20%&#x3002;</td>
 <td>4</td>
 </tr>
@@ -492,14 +492,14 @@
 </tr>
 <tr>
 
-<td>&#x536B;&#x56FD;&#x6218;&#x4E89;</td>
-<td>&#x58EB;&#x5175;&#x5728;&#x672C;&#x65B9;&#x57FA;&#x5730;&#x5230;&#x6218;&#x573A;<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mn>1</mn><mi mathvariant="normal">/</mi><mn>3</mn></mrow><annotation encoding="application/x-tex">1/3</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">1/3</span></span></span></span>&#x65F6;&#x653B;&#x51FB;&#x529B;+30%&#x3002;</td>
+<td>&#x52E4;&#x738B;</td>
+<td>&#x58EB;&#x5175;&#x5728;&#x672C;&#x65B9;&#x57FA;&#x5730;&#x5230;&#x6218;&#x573A;<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mn>1</mn><mi mathvariant="normal">/</mi><mn>3</mn></mrow><annotation encoding="application/x-tex">1/3</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">1/3</span></span></span></span>&#x7684;&#x533A;&#x95F4;&#x5185;&#x653B;&#x51FB;&#x529B;+30%&#x3002;</td>
 <td>2</td>
 </tr>
 <tr>
 
-<td>&#x4EE5;&#x6218;&#x517B;&#x6218;</td>
-<td>&#x58EB;&#x5175;&#x5728;&#x6218;&#x6597;&#x65F6;&#x4E0D;&#x6D88;&#x8017;&#x8865;&#x7ED9;&#x3002;</td>
+<td>&#x519B;&#x4E8B;&#x540E;&#x52E4;</td>
+<td>&#x58EB;&#x5175;&#x5728;&#x672C;&#x65B9;&#x57FA;&#x5730;&#x5230;&#x6218;&#x573A;&#x4E2D;&#x7EBF;&#x7684;&#x533A;&#x95F4;&#x5185;&#x4E0D;&#x6D88;&#x8017;&#x8865;&#x7ED9;&#x3002;</td>
 <td>3</td>
 </tr>
 <tr>
